# pixma-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/pixma-bridge/: Cargo.toml
crates/pixma-bridge/src/: escl.rs  main.rs  translate.rs
crates/pixma-cli/: Cargo.toml
crates/pixma-cli/src/: discover.rs  main.rs  print.rs  scan.rs
crates/pixma-protocol/: Cargo.toml
crates/pixma-protocol/src/: chmp.rs  discover.rs  error.rs  lib.rs
crates/pixma-protocol/src/bjnp/: mod.rs  packet.rs  tcp.rs  udp.rs
crates/pixma-protocol/src/scanner/: commands.rs  image.rs  mod.rs  session.rs
docs/: protocol.md
docs/captures/: canon_scan.pcapng  scan_trace.md
installer/: build-pkg.sh  com.pdrgds.pixma-bridge.plist
installer/scripts/: postinstall
